# coreml-examples

./: .gitignore  .gitmodules  README.md
DepthProSample/: README.md
DepthProSample/Common/: CoreImageExtensions.swift  OutputBufferConversions.swift
DepthProSample/DepthProCLI/: MainCommand.swift
DepthProSample/DepthProSample/: ContentView.swift  DepthProSampleApp.swift
DepthProSample/DepthProSample.xcodeproj/: project.pbxproj
FastViTSample/: README.md
FastViTSample/FastViTSample/: CameraView.swift  CoreImageExtensions.swift  DataModel.swift  ViewfinderView.swift
FastViTSample/FastViTSample.xcodeproj/: project.pbxproj
SemanticSegmentationSample/: README.md
SemanticSegmentationSample/Common/: PostProcessing.swift  SemanticMapToColor.metal  SemanticMapToImage.swift
SemanticSegmentationSample/SemanticSegmentationCLI/: MainCommand.swift
SemanticSegmentationSample/SemanticSegmentationSample/: Camera.swift  CameraView.swift  DataModel.swift  SegmentationView.swift
SemanticSegmentationSample/SemanticSegmentationSample.xcodeproj/: project.pbxproj
depth-anything-example/: README.md
depth-anything-example/DepthApp/: Camera.swift  CameraView.swift  DataModel.swift  DepthApp.swift  DepthView.swift  ViewfinderView.swift
depth-anything-example/DepthCLI/: MainCommand.swift
depth-anything-example/DepthSample.xcodeproj/: project.pbxproj
tutorials/: depth-anything-coreml-guide.ipynb
tutorials/DepthPro/: pyproject.toml
tutorials/depth-anything/: depth-anything-coreml-guide.ipynb
(+4 files in other folders)
